Alterando o metodo de blueness novo